"1.2.b QA RUI [Player - iOS] Content is misaligned at flag pop up in portrait mode Fixed."

--- a/src/main/java/org/ednovo/gooru/client/mvp/home/res_loginpopup4.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/home/res_loginpopup4.css
@@ -21,7 +21,9 @@
  .flagbuttonDeSelected{}
  .rightFlagPanel{}
  .leftFlagMenu{}
- .leftFlagPanel{}
+ .leftFlagPanel{
+  height:86px !important;
+ }
  
 .firstInputGroup{}
 .childUserInfoContainer{}
